# cpp-enumerator

./: CMakeLists.txt  README.md
cmake/: enumeratorConfig.cmake.in
include/: enumerator.hpp
include/enumerator/: enumerator.hpp
tests/: test_enumerator.cpp
